--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>config</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <description>Serviço de centralização de configurações</description>
 
     <properties>
         <appName>config-service</appName>
